--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,42 @@
 
 @import "~bootstrap/scss/bootstrap.scss";
 @import "./banner.scss";
+@import "./navbar.scss";
+@import "./buttons.scss";
+
+p{
+  font-size: .75em;
+  font-family: $primary-font;
+  margin:.5em
+}
+
+span{
+  font-size: 1.5em;
+  font-weight: bold;
+  font-family: $primary-font;
+  margin:.5em
+}
+
+h1{
+  font-size: 3em;
+  font-family: $secondary-font;
+  margin: .75em;
+}
+
+h2{
+  font-size: 2.5em;
+  font-family: $secondary-font;
+  margin: 1em;
+}
+
+h3{
+  font-size: 2em;
+  font-family: $secondary-font;
+  margin: 1em;
+}
+
+h4{
+  font-size: 1.25em;
+  font-family: $secondary-font;
+  margin: 1em;
+}
