--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -16,3 +16,35 @@
   background: $cta-color;
   border: none;
 }
+
+.social-btn{
+  display: inline-block;
+}
+
+.fa {
+  display: inline-block;
+  padding: 10px;
+  font-size: 50px;
+  border-radius: 5px;
+  width: 70px;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  display: inline-block;
+  background: #3B5998;
+  color: white;
+}
+
+.fa-instagram {
+  display: inline-block;
+  background: #125688;
+  color: white;
+}
