--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,15 +8,23 @@
 @import "./banner.scss";
 @import "./navbar.scss";
 @import "./buttons.scss";
+@import "./footer.scss";
 
 p{
-  font-size: .75em;
+  font-size: 1em;
   font-family: $primary-font;
   margin:.5em
 }
 
 span{
   font-size: 1.5em;
+  font-weight: bold;
+  font-family: $primary-font;
+  margin:.5em
+}
+
+li{
+  font-size: 1.25em;
   font-weight: bold;
   font-family: $primary-font;
   margin:.5em
