Here to help section

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $secondary-font: 'Yanone Kaffeesatz', sans-serif;
 // the best color scheme
 
 $peach: #FF967F;
+$off-white: rgb(249,241,241);
 $light-blue: #B1E3F5;
 $navy-blue: #151F53;
 $sand: #EBDAAD;
