Client Side to Volunteer Page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./navbar.scss";
 @import "./buttons.scss";
 @import "./footer.scss";
+@import "./forms.scss";
 
 body{
   background:$off-white;
