--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -3,11 +3,19 @@
 .banner{
   position: relative;
   text-align: center;
-  
+
   img{
     max-height: 600px;
     min-height: 300px;
     width: 100%;
 		object-fit: cover;
   }
+}
+
+.banner-title{
+  color:$peach;
+  top:30%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
