--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,7 +7,7 @@
 }
 
 .footer-map{
-  margin-top: -150px;
+  margin-top:20px;
   @include media-breakpoint-down(xs) {
     display: none;
 	}
@@ -21,7 +21,7 @@
 }
 
 .footer-map-item:hover{
-  color:$sand;
+  color:$peach;
   cursor:pointer;
 }
 
