--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -83,6 +83,11 @@ h4{
   padding: 1em
 }
 
+.sand{
+  background: $sand;
+  padding:1em;
+}
+
 .resource-cont{
   text-align: center;
   padding-left: 20%;
