--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,11 +9,11 @@ $secondary-font: 'Yanone Kaffeesatz', sans-serif;
 // recommand to use http://colormind.io/bootstrap/# to generate
 // the best color scheme
 
-$peach: #FF967F;
+$peach: #F18F7E;
 $off-white: rgb(249,241,241);
-$light-blue: #B1E3F5;
-$navy-blue: #151F53;
-$sand: #EBDAAD;
+$light-blue: #C5E1F6;
+$navy-blue: #0D2647;
+$sand: #F7D1B6;
 $cta-color: #ba271a;
 
 $light-shades: #f7f5f4; // DESERT STORM
