Fixed fonts and added header images

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -25,6 +25,10 @@
   cursor:pointer;
 }
 
+.footer-txt{
+  font-size: 1em;
+}
+
 .socials-container{
   width: 100%;
   @include media-breakpoint-down(xs) {
